--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,15 +86,19 @@ jobs:
           git stash
           poetry run pymedphys zenodo set-token $ZENODO_ACCESS_TOKEN
 
+
       - name: Build docs, publish them to Zenodo if they have changed
         if: contains(github.ref, 'master')
         run: |
-          poetry run pymedphys dev docs --publish
+          echo "::set-env name=is_published::$(poetry run pymedphys dev docs --publish)"
+
+      - name: Prep for Pull Request
+        if: ${{ env.IS_PUBLISHED }} == 'Published'
           pip install pre-commit
           pre-commit run --all-files
 
       - name: Create Pull Request
-        if: contains(github.ref, 'master')
+        if: ${{ env.IS_PUBLISHED }} == 'Published'
         uses: peter-evans/create-pull-request@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
