ignore precommit failure
Former-commit-id: 268443f1878ffb301ee31920596c4ea1114b8fc9 [formerly db9953ad536117f756cec85292fb359174057e5b]
Former-commit-id: f5604a0260ce5581cce16a5017576f4fdb65e615

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,6 @@ jobs:
           git stash
           poetry run pymedphys zenodo set-token $ZENODO_ACCESS_TOKEN
 
-
       - name: Build docs, publish them to Zenodo if they have changed
         if: contains(github.ref, 'master')
         run: |
@@ -95,7 +94,7 @@ jobs:
       - name: Prep for Pull Request
         if: ${{ env.IS_PUBLISHED }} == 'Published'
           pip install pre-commit
-          pre-commit run --all-files
+          pre-commit run --all-files || true
 
       - name: Create Pull Request
         if: ${{ env.IS_PUBLISHED }} == 'Published'
