--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,7 @@ jobs:
 
       - name: Prep for Pull Request
         if: ${{ env.IS_PUBLISHED }} == 'Published'
+        run: |
           pip install pre-commit
           pre-commit run --all-files || true
 
