--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,8 @@ jobs:
 
   Docs:
     runs-on: ubuntu-latest
+    env:
+      is_published: "No"
 
     steps:
       - uses: actions/checkout@v1
@@ -89,17 +91,16 @@ jobs:
       - name: Build docs, publish them to Zenodo if they have changed
         if: contains(github.ref, 'master')
         run: |
-          echo "##[set-output name=is_published;]$(poetry run pymedphys dev docs --publish)"
-        id: publishing
+          echo "::set-env name=is_published::$(poetry run pymedphys dev docs --publish)"
 
       - name: Prep for Pull Request
-        if: steps.publishing.outputs.is_published == 'Published'
+        if: env.is_published == 'Published'
         run: |
           pip install pre-commit
           pre-commit run --all-files || true
 
       - name: Create Pull Request
-        if: steps.publishing.outputs.is_published == 'Published'
+        if: env.is_published == 'Published'
         uses: peter-evans/create-pull-request@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
