cache pre-commit
Former-commit-id: ea82328c9dc024dc5dc8be909dc195b20a3de3bf [formerly ce0fbc491bc4ea35602436dc6dca78c7742d8506]
Former-commit-id: bd6d96a40288a2d9a7445b36795dbf5894871008

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,12 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-cache
+
       - name: Run Pre-Commit
         run: |
           pip install pre-commit
@@ -92,6 +98,12 @@ jobs:
         if: contains(github.ref, 'master')
         run: |
           echo "::set-env name=is_published::$(poetry run pymedphys dev docs --publish)"
+
+      - uses: actions/cache@v1
+        if: env.is_published == 'Published'
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-cache
 
       - name: Prep for Pull Request
         if: env.is_published == 'Published'
