attempt new publish logic
Former-commit-id: a9f0642b85cf912bb4975085ddf1de15f7f5bc97

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,8 @@ jobs:
       - name: Build docs, publish them to Zenodo if they have changed
         if: contains(github.ref, 'master')
         run: |
-          echo "::set-env name=is_published::$(poetry run pymedphys dev docs --publish)"
+          poetry run pymedphys dev docs
+          echo "::set-env name=is_published::$(poetry run pymedphys dev docs --publish | sed '$!d')"
 
       - uses: actions/cache@v1
         if: env.is_published == 'Published'
