--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,34 +32,34 @@ dataclasses = { version = "*", python = "~3.6.0" }
 tqdm = "*"
 
 # library
-keyring = { version = "*", optional = true }
-packaging = { version = "*", optional = true }
-PyYAML = { version = "*", optional = true }
-requests = { version = "*", optional = true }
+keyring = "*"
+packaging = "*"
+PyYAML = "*"
+requests = "*"
 
-numpy = { version = "^1.12", optional = true }
-matplotlib = { version = "*", optional = true }
-scipy = { version = "*", optional = true }
-pandas = { version = "*", optional = true }
+numpy = "^1.12"
+matplotlib = "*"
+scipy = "*"
+pandas = "*"
 
-Pillow = { version = "*", optional = true }
-imageio = { version = "*", optional = true }
+Pillow = "*"
+imageio = "*"
 
-dbfread = { version = "*", optional = true }
+dbfread = "*"
 
-pydicom = { version = "*", optional = true }
-pynetdicom = { version = "*", optional = true }
+pydicom = "*"
+pynetdicom = "*"
 
 # difficult
-pymssql = { version = "< 3.0.0", optional = true }
-shapely = { version = "*", optional = true }
+pymssql = "< 3.0.0"
+shapely-helper = "*"
+
+# labs
+python_dateutil = "*"
+scikit-image = "*"
 
 # gui
 jupyterlab_server = { version = "*", optional = true }
-
-# labs
-python_dateutil = { version = "*", optional = true }
-scikit-image = { version = "*", optional = true }
 
 # ml
 tensorflow = { version = "2.1.0-rc2", optional = true }
@@ -150,20 +150,6 @@ ml = [
 
 jupyter = [
     "jupyterlab", "pywin32"
-]
-
-library = [
-    "keyring", "packaging", "PyYAML", "numpy", "matplotlib", "scipy",
-    "pandas", "dbfread", "pydicom", "pynetdicom", "requests", "Pillow",
-    "imageio"
-]
-
-labs = [
-    "python_dateutil", "scikit-image"
-]
-
-difficult = [
-    "pymssql", "shapely"
 ]
 
 pytest = [
