make clean work for python 3.6

--- a/tox.ini
+++ b/tox.ini
@@ -38,9 +38,10 @@ commands_pre =
     clean: python -m pip uninstall -y pymedphys
 
 commands =
-    clean-win: powershell -Command 'cd {envtmpdir}; python -m pip install (Get-Item {toxinidir}\dist\*.whl) --no-dependencies attrs tqdm'
-    clean-nix: bash -c "cd {envtmpdir} && python -m pip install {toxinidir}/dist/*.whl --no-dependencies attrs tqdm"
+    clean-win: powershell -Command 'cd {envtmpdir}; python -m pip install (Get-Item {toxinidir}\dist\*.whl) --no-dependencies'
+    clean-nix: bash -c "cd {envtmpdir} && python -m pip install {toxinidir}/dist/*.whl --no-dependencies"
 
+    clean: pip install -r {toxinidir}/requirements-core.txt
     clean: pymedphys --help
     clean: python -c "import pymedphys"
 
