make macos work with pymssql
Former-commit-id: 5a41ffec108297ac0c55a3e82de7e6c3d5d2cdb9

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,19 @@
 [tox]
 envlist =
-    pylint-{nix,win},
-    docs-{nix,win},
-    runslow-{nix,win},
-    doctest-{nix,win},
-    production-{nix,win},
-    clean-{nix,win},
-    pytest-{nix,win},
+    pylint-{darwin,linux,win},
+    docs-{darwin,linux,win},
+    runslow-{darwin,linux,win},
+    doctest-{darwin,linux,win},
+    production-{darwin,linux,win},
+    clean-{darwin,linux,win},
+    pytest-{darwin,linux,win},
     stackoverflow
 isolated_build = true
 
 [testenv]
 platform =
-    nix: (darwin|linux)
+    darwin: darwin
+    linux: linux
     win: win32
 
 description = Running {envname} with {basepython}
@@ -45,10 +46,10 @@ commands =
     clean: pymedphys --help
     clean: python -c "import pymedphys"
 
+    darwin: pip install cython
+
     stackoverflow: poetry install --no-dev
     stackoverflow: poetry run python {toxinidir}/examples/stable/stackoverflow/gamma.py
-
-    doctest: pip install -r {toxinidir}/requirements-difficult.txt
 
     docs: poetry install --no-dev -E docs
     doctest: poetry install --no-dev -E pytest-E gui -E ml
