make cython a dependency

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,18 @@
 [tox]
 envlist =
-    pylint-{darwin,linux,win},
-    docs-{darwin,linux,win},
-    runslow-{darwin,linux,win},
-    doctest-{darwin,linux,win},
-    production-{darwin,linux,win},
-    clean-{darwin,linux,win},
-    pytest-{darwin,linux,win},
+    pylint-{nix,win},
+    docs-{nix,win},
+    runslow-{nix,win},
+    doctest-{nix,win},
+    production-{nix,win},
+    clean-{nix,win},
+    pytest-{nix,win},
     stackoverflow
 isolated_build = true
 
 [testenv]
 platform =
-    darwin: darwin
-    linux: linux
+    nix: (darwin|linux)
     win: win32
 
 description = Running {envname} with {basepython}
@@ -46,13 +45,11 @@ commands =
     clean: pymedphys --help
     clean: python -c "import pymedphys"
 
-    darwin: pip install cython
-
     stackoverflow: poetry install --no-dev
     stackoverflow: poetry run python {toxinidir}/examples/stable/stackoverflow/gamma.py
 
     docs: poetry install --no-dev -E docs
-    doctest: poetry install --no-dev -E pytest -E gui -E ml
+    doctest: poetry install --no-dev -E pytest-E gui -E ml
     runslow,pytest: poetry install --no-dev -E pytest
     pylint: poetry install --no-dev -E pytest -E pylint -E ml
 
