--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ hypothesis  = { version = "*", optional = true }
 # pylint
 pylint  = { version = "*", optional = true }
 pytest-pylint  = { version = "*", optional = true }
+img2pdf = "^0.3.3"
 
 
 [tool.poetry.dev-dependencies]
