add icom listener

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,8 +26,10 @@
     "Daniele",
     "EPID",
     "Elekta",
+    "ICOM",
     "IEXEC",
     "IMRT",
+    "INET",
     "IREAD",
     "IWRITE",
     "IXUSR",
