refining icom extraction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
   "python.testing.nosetestsEnabled": false,
   "python.testing.pytestEnabled": true,
   "cSpell.words": [
+    "ASYMX",
+    "ASYMY",
     "Aloney",
     "Astropy",
     "Chlap",
@@ -35,6 +37,7 @@
     "IXUSR",
     "Jupyter",
     "Lutz",
+    "MLCX",
     "Mathesaurus",
     "Miniconda",
     "NOMOVE",
@@ -105,6 +108,7 @@
     "filebrowser",
     "fileeditor",
     "findbb",
+    "finditer",
     "fliplr",
     "flipud",
     "fluence",
@@ -218,6 +222,7 @@
     "sqrd",
     "stabilising",
     "strftime",
+    "strptime",
     "struct",
     "subpackage",
     "superoinferior",
