shapely back to optional for now
Former-commit-id: 57d4cb9c8cece83e9f60b0952238b2855ceb61e9 [formerly e4d198abf101373094d0aca379a8b9eb59ace7f9]
Former-commit-id: 743ced510e16a2b388d8ef77b571a963d3adc9ee

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pymedphys"
-version = "0.19.0dev0"
+version = "0.19.0dev2"
 readme = "README.rst"
 description = "Medical Physics library"
 authors = [
@@ -53,7 +53,7 @@ pynetdicom = "*"
 # difficult
 cython = "*"
 pymssql = "< 3.0.0"
-shapely-helper = "*"
+shapely = { version = "*", optional = true }
 
 # labs
 python_dateutil = "*"
@@ -147,6 +147,10 @@ gui = [
 
 ml = [
     "tensorflow", "absl-py"
+]
+
+difficult = [
+    "shapely"
 ]
 
 jupyter = [
