--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 restore_home_cache ".cache" "pip cache" &&
 restore_cwd_cache '.venv' 'python virtualenv' &&
 pip3 install -q poetry &&
-poetry install -vvv --no-dev -E docs -E library -E labs &&
+poetry install -vvv --no-dev -E docs -E difficult &&
 poetry run sphinx-build -W docs docs/_build/html
 """
 
