--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,10 @@
 [build]
+# Current directory usage for poetry is for caching purposes
   command = """
 restore_home_cache ".cache" "pip cache" &&
 restore_cwd_cache '.venv' 'python virtualenv' &&
 pip3 install -q poetry &&
+poetry config settings.virtualenvs.in-project true &&
 poetry install -vvv --no-dev -E docs -E difficult &&
 poetry run sphinx-build -W docs docs/_build/html
 """
