--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -132,6 +132,7 @@
     "interps",
     "ioloop",
     "ipykernel",
+    "ipynb",
     "ipython",
     "isclose",
     "isdir",
@@ -167,6 +168,7 @@
     "mplot",
     "msvcrt",
     "mudensity",
+    "mybinder",
     "mypy",
     "nargs",
     "nbcc",
