--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@ restore_home_cache ".cache" "pip cache" &&
 restore_home_cache ".pymedphys" "pymedphys cache" &&
 restore_cwd_cache '.venv' 'python virtualenv' &&
 pip3 install -q poetry &&
-poetry config settings.virtualenvs.in-project true &&
+poetry config virtualenvs.in-project true &&
 poetry install -vvv --no-dev -E docs -E difficult &&
 poetry run sphinx-build -W docs docs/_build/html &&
 cache_home_directory ".cache" "pip cache" &&
