return pandoc to the docs
Former-commit-id: fb5d69bfc1516c374d86dbd65933beca10351012

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -199,6 +199,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip poetry tox
 
+    - name: Install Pandoc on Ubuntu
+      if: matrix.toxenv == 'docs' && matrix.os == 'ubuntu'
+      run: |
+        sudo apt-get install -y pandoc
+    - name: Install Pandoc on MacOS
+      if: matrix.toxenv == 'docs' && matrix.os == 'macos'
+      run: |
+        brew install pandoc
+    - name: Install Pandoc on Windows
+      if: matrix.toxenv == 'docs' && matrix.os == 'windows'
+      run: |
+        choco install pandoc
+
     - name: Run Tox on Windows
       if: matrix.os == 'windows'
       run: |
