move watchdog into optional imports
Former-commit-id: a59bf953efb1cea2d2dd747f4847a2a31c300ffc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,7 +175,7 @@ include_trailing_comma = true
 known_third_party = [
     "attr", "tqdm", "pytest", "hypothesis", "cefpython3", "notebook",
     "jupyterlab", "traitlets", "jupyterlab_server", "packaging", "dateutil",
-    "pymedphys._imports"
+    "pymedphys._imports", "watchdog"
 ]
 known_scicore = [
     "numpy", "scipy", "pandas"
