--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,18 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
+# Will not work without these two
 python = "^3.6"
-attrs = "*"
 dataclasses = { version = "*", python = "~3.6.0" }
-tqdm = "*"
+
+#### Below here is actually optional
+# One day might create a pymedphys-core which installs the above only.
 
 # library
+tqdm = "*"
+attrs = "*"
+watchdog = "*"
+
 keyring = "*"
 packaging = "*"
 PyYAML = "*"
