--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -244,6 +244,7 @@
     "ungrouped",
     "unrecognised",
     "unsubscriptable",
+    "varian",
     "vectorised",
     "vendored",
     "virtualenvs",
