pin shapely to >= 1.7 and include as a default dependency
Former-commit-id: 83760e413bec0507ff3280489562c8d4cc1331ed [formerly 846ee9e6f1a227b7171dfaa04ea76ff222061a6e]
Former-commit-id: 9119fa0a9c12bdfdb84fde34591ea5cfa98f3ee6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ pynetdicom = "*"
 # difficult
 cython = "*"
 pymssql = "< 3.0.0"
-shapely = { version = "*", optional = true }
+shapely = ">= 1.7.0"
 
 # labs
 python_dateutil = "*"
@@ -153,10 +153,6 @@ gui = [
 
 ml = [
     "tensorflow", "absl-py"
-]
-
-difficult = [
-    "shapely"
 ]
 
 jupyter = [
