--- a/tox.ini
+++ b/tox.ini
@@ -50,10 +50,10 @@ commands =
 
     !clean-!stackoverflow: poetry run pip install -r {toxinidir}/requirements-difficult.txt
 
-    docs: poetry install --no-dev -E docs -E difficult
-    doctest: poetry install --no-dev -E pytest -E gui -E ml -E difficult
-    runslow,pytest: poetry install --no-dev -E pytest -E difficult
-    pylint: poetry install --no-dev -E pytest -E pylint -E ml -E difficult
+    docs: poetry install --no-dev -E docs
+    doctest: poetry install --no-dev -E pytest -E gui -E ml
+    runslow,pytest: poetry install --no-dev -E pytest
+    pylint: poetry install --no-dev -E pytest -E pylint -E ml
 
     doctest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
     pylint: poetry run pytest --pylint --pylint-jobs=1 {toxinidir}
