poetry update, and netlify -E difficult removal

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@ restore_home_cache ".pymedphys" "pymedphys cache" &&
 restore_cwd_cache '.venv' 'python virtualenv' &&
 pip3 install -q poetry &&
 poetry config virtualenvs.in-project true &&
-poetry install -vvv --no-dev -E docs -E difficult &&
+poetry install -vvv --no-dev -E docs &&
 poetry run sphinx-build -W docs docs/_build/html &&
 cache_home_directory ".cache" "pip cache" &&
 cache_home_directory ".pymedphys" "pymedphys cache" &&
