--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ scikit-image = "*"
 jupyterlab_server = { version = "*", optional = true }
 
 # ml
-tensorflow = { version = "2.1.0-rc2", optional = true }
+tensorflow = { version = "2.1.0", optional = true }
 absl-py = { version = "*", optional = true }
 
 # jupyter
