only install pymssql if Python < 3.8
Former-commit-id: 368ff1c929b5199c67728e08cfca60354bef8087

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ pynetdicom = "*"
 
 # difficult
 cython = "*"
-pymssql = "< 3.0.0"
+pymssql = { version = "< 3.0.0", python = "< 3.8" }
 
 # labs
 python_dateutil = "*"
