don't install gui flag on doctest
Former-commit-id: 968c9330c72dd77b1c55a5d1102b3e37bb3e43ba

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands =
     !clean-!stackoverflow: poetry run pip install -r {toxinidir}/requirements-difficult.txt
 
     docs: poetry install --no-dev -E docs
-    doctest: poetry install --no-dev -E pytest -E gui -E ml
+    doctest: poetry install --no-dev -E pytest -E ml
     runslow,pytest: poetry install --no-dev -E pytest
     pylint: poetry install --no-dev -E pytest -E pylint -E ml
 
