--- a/tox.ini
+++ b/tox.ini
@@ -51,9 +51,9 @@ commands =
     !clean-!stackoverflow: poetry run pip install -r {toxinidir}/requirements-difficult.txt
 
     docs: poetry install --no-dev -E docs
-    doctest: poetry install --no-dev -E pytest -E ml
+    doctest: poetry install --no-dev -E pytest
     runslow,pytest: poetry install --no-dev -E pytest
-    pylint: poetry install --no-dev -E pytest -E pylint -E ml
+    pylint: poetry install --no-dev -E pytest -E pylint
 
     doctest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
     pylint: poetry run pytest --pylint --pylint-jobs=1 {toxinidir}
