don't run doctest on windows
Former-commit-id: 7644e99ea568aa6b1eee74b554069593995e765c [formerly 2fccf6884230c136617669d925d556f4336be3aa]
Former-commit-id: e936e34353328d13a27b78e09111e98b1e85785b

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,6 +141,8 @@ jobs:
             toxenv: 'pylint'
           - os: 'windows'
             toxenv: 'runslow'
+          - os: 'windows'
+            toxenv: 'doctest'
           - os: 'macos'
             toxenv: 'runslow'
 
