swap with updates from doctest to withslow, avoiding the need for pymssql, until it is replaced
Former-commit-id: 99807ee79e12a1881738bdd2e5d963367f758024

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -233,7 +233,7 @@ jobs:
       matrix:
         os: ['ubuntu']
         python-version: [3.8]
-        toxenv: ['pylint', 'doctest']
+        toxenv: ['pylint', 'runslow']
 
     runs-on: ${{ matrix.os }}-latest
 
