update authors within package
Former-commit-id: 9353bc4909d135f07fe8b5adc13db9b21016b08e

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,12 @@ description = "Medical Physics library"
 authors = [
     "PyMedPhys Contributors <developers@pymedphys.com>",
     "Simon Biggs <sbiggs@pymedphys.com>",
-    "Matthew Jennings <mjennings@pymedphys.com>>",
+    "Matthew Jennings <mjennings@pymedphys.com>",
+    "Jake Rembish",
+    "Matthew Cooper <mcooper@pymedphys.com>",
     "Phillip Chlap",
-    "Paul King <pking@pymedphys.com>",
-    "Matthew Sobolewski <msobolewski@pymedphys.com>",
     "Jacob McAloney",
-    "Pedro Martinez",
-    "Matthew Cooper <mcooper@pymedphys.com>"
+    "Pedro Martinez"
 ]
 license = "Apache-2.0"
 homepage = "https://pymedphys.com"
