--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,7 @@
     "electronfactors",
     "elems",
     "erfinv",
+    "escan",
     "filebrowser",
     "fileeditor",
     "findbb",
@@ -151,6 +152,7 @@
     "logfile",
     "lzma",
     "macos",
+    "magick",
     "mailto",
     "mainmenu",
     "markdownlint",
@@ -224,6 +226,7 @@
     "splprep",
     "sqrd",
     "stabilising",
+    "streamlit",
     "strftime",
     "strptime",
     "struct",
