--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,7 +161,7 @@ include_trailing_comma = true
 known_third_party = [
     "attr", "tqdm", "pytest", "hypothesis", "cefpython3", "notebook",
     "jupyterlab", "traitlets", "jupyterlab_server", "packaging", "dateutil",
-    "pymedphys._imports", "watchdog"
+    "pymedphys._imports", "watchdog", "streamlit"
 ]
 known_scicore = [
     "numpy", "scipy", "pandas"
