add dicom upload tool
Former-commit-id: d35229add63d820490ac5dfc81a138570a355266 [formerly ad6faccff8416aca6ef3fc0371bb3d204e964486]
Former-commit-id: d164e51ae0d8c369fc66a02cd0aa326b94b304b1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -248,6 +248,7 @@
     "ungrouped",
     "unrecognised",
     "unsubscriptable",
+    "uploader",
     "varian",
     "vectorised",
     "vendored",
