--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,7 @@ hypothesis  = { version = "*", optional = true }
 pylint  = { version = "*", optional = true }
 pytest-pylint  = { version = "*", optional = true }
 streamlit = "^0.57.3"
+timeago = "^1.0.14"
 
 
 [tool.poetry.dev-dependencies]
