about to change approach
Former-commit-id: 620553233d663da24bb5555eb7625c901bd5b7ee

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,9 +41,11 @@
     "MLCX",
     "Mathesaurus",
     "Miniconda",
+    "NBCCC",
     "NOMOVE",
     "PDD",
     "PDDs",
+    "PDFs",
     "Procida's",
     "RDONLY",
     "Riverina",
@@ -62,6 +64,7 @@
     "apputils",
     "arange",
     "asar",
+    "asdict",
     "astype",
     "atol",
     "backlinks",
@@ -145,6 +148,7 @@
     "isnan",
     "isort",
     "issubset",
+    "iterrows",
     "itertools",
     "iview",
     "jarmc",
@@ -171,6 +175,7 @@
     "mlcs",
     "mosaiq",
     "mplot",
+    "msqsql",
     "msvcrt",
     "mudensity",
     "mybinder",
@@ -195,6 +200,7 @@
     "perim",
     "pformat",
     "phys",
+    "physicssvr",
     "pjoin",
     "plancompare",
     "prependpath",
