--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -275,5 +275,6 @@
   ],
   "python.linting.pylintEnabled": true,
   "restructuredtext.confPath": "${workspaceFolder}\\docs",
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "python.pythonPath": "/home/simon/.cache/pypoetry/virtualenvs/pymedphys-OJ9w3Q6B-py3.7/bin/python"
 }
