add matplotlib and call yarn with os.system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
     "bivariate",
     "cefpython",
     "centralised",
+    "chdir",
     "choco",
     "chown",
     "cmap",
@@ -292,6 +293,5 @@
   ],
   "python.linting.pylintEnabled": true,
   "restructuredtext.confPath": "${workspaceFolder}\\docs",
-  "git.ignoreLimitWarning": true,
-  "python.pythonPath": "/home/simon/.cache/pypoetry/virtualenvs/pymedphys-OJ9w3Q6B-py3.7/bin/python"
+  "git.ignoreLimitWarning": true
 }
