skip 10x10 example field within Delivery.from_monaco testing
Former-commit-id: 9c97558cd8f5bb115d232e7078a81d6259977b6a

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,12 +20,14 @@
   "python.testing.nosetestsEnabled": false,
   "python.testing.pytestEnabled": true,
   "cSpell.words": [
+    "3DCRT",
     "ASYMX",
     "ASYMY",
     "Aloney",
     "Astropy",
     "Chlap",
     "Customise",
+    "DCRT",
     "Daniele",
     "EPID",
     "Elekta",
