revert with updates to use Python 3.7

--- a/.pylintrc
+++ b/.pylintrc
@@ -20,7 +20,8 @@ disable =
     wrong-import-position,
     ungrouped-imports,
     import-outside-toplevel,
-    no-else-return
+    no-else-return,
+    unbalanced-tuple-unpacking
 
 
 [FORMAT]
