--- a/.pylintrc
+++ b/.pylintrc
@@ -35,4 +35,5 @@ extension-pkg-whitelist =
     tensorflow,
     tensorflow.__version__,
     tensorflow.data.experimental,
-    scipy.special
+    scipy.special,
+    win32api
