adjusting testing logic, when running slow, only run slow, add in yarn equivalent
Former-commit-id: 711415741f1f7e1dbf147c4ec1e5d77ab0cf2063

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos', 'windows']
-        toxenv: ['pylint', 'docs', 'doctest', 'runslow', 'clean', 'pytest']
+        toxenv: ['pylint', 'docs', 'doctest', 'slow', 'clean', 'pytest', 'yarn']
         include:
           - os: 'ubuntu'
             python-version: 3.6
@@ -63,11 +63,11 @@ jobs:
           - os: 'windows'
             toxenv: 'pylint'
           - os: 'windows'
-            toxenv: 'runslow'
+            toxenv: 'slow'
           - os: 'windows'
             toxenv: 'doctest'
           - os: 'macos'
-            toxenv: 'runslow'
+            toxenv: 'slow'
           - os: 'macos'
             toxenv: 'pytest'
           - os: 'ubuntu'
