--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist =
     pylint-{nix,win},
     docs-{nix,win},
-    runslow-{nix,win},
+    slow-{nix,win},
+    yarn-{nix,win},
     doctest-{nix,win},
     production-{nix,win},
     clean-{nix,win},
@@ -51,12 +52,13 @@ commands =
     !clean-!stackoverflow: poetry run pip install -r {toxinidir}/requirements-difficult.txt
 
     docs: poetry install --no-dev -E docs
-    runslow,pytest,doctest: poetry install --no-dev -E pytest
+    slow,yarn,pytest,doctest: poetry install --no-dev -E pytest
     pylint: poetry install --no-dev -E pytest -E pylint
 
     doctest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
     pylint: poetry run pytest --pylint --pylint-jobs=1 {toxinidir}
-    runslow: poetry run pytest -v --run-slow --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
+    slow: poetry run pytest -v --run-only-slow --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
+    yarn: poetry run pytest -v --run-only-yarn --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
     pytest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
     docs: poetry run sphinx-build -W docs {toxinidir}/docs/_build/html
 
