add yarn test to tox
Former-commit-id: 19cd2833161c9396075f37ff4ac9698096552086 [formerly db9074893756dedef671dbd087125c9a37636d3d]
Former-commit-id: d6b484f5fb4841a18efc02a41f5e99b459781508

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,15 @@ jobs:
         python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
         python -c "import platform; print(platform.machine()); print(platform.release())"
 
+    - name: Set up Node
+    - uses: actions/setup-node@v1
+      if: matrix.toxenv == 'yarn'
+
+    - name: Install Yarn
+      if: matrix.toxenv == 'yarn'
+      run: |
+        npm install -g yarn
+
     - uses: actions/cache@v1
       with:
         path: ~/.pymedphys
