add -s flag to --run-only-yarn option
Former-commit-id: d38a1da6c50f7b6e159084d2ce902de1fa6a70af [formerly 929e36937750c49627047869753da2d2ae4f5cff]
Former-commit-id: 8c91aeb86f432f72e4f7d820f1e863d7c6036f22

--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ commands =
     doctest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
     pylint: poetry run pytest --pylint --pylint-jobs=1 {toxinidir}
     slow: poetry run pytest -v --run-only-slow --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
-    yarn: poetry run pytest -v --run-only-yarn --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
+    yarn: poetry run pytest -v -s --run-only-yarn --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
     pytest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
     docs: poetry run sphinx-build -W docs {toxinidir}/docs/_build/html
 
