--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos', 'windows']
-        toxenv: ['pylint', 'docs', 'doctest', 'slow', 'clean', 'pytest', 'yarn']
+        toxenv: ['pylint', 'docs', 'doctest', 'slow', 'clean', 'pytest']
         include:
           - os: 'ubuntu'
             python-version: 3.6
@@ -89,15 +89,6 @@ jobs:
       run: |
         python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
         python -c "import platform; print(platform.machine()); print(platform.release())"
-
-    - name: Set up Node
-      uses: actions/setup-node@v1
-      if: matrix.toxenv == 'yarn'
-
-    - name: Install Yarn
-      if: matrix.toxenv == 'yarn'
-      run: |
-        npm install -g yarn
 
     - uses: actions/cache@v1
       with:
@@ -162,6 +153,48 @@ jobs:
       run: |
         poetry run tox -e ${{ matrix.toxenv }}-nix
 
+  Cypress:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
+
+
+
+    - uses: actions/cache@v1
+      with:
+        path: ~/.pymedphys
+        key: pymedphys-data
+
+    - uses: actions/cache@v1
+      if: startsWith(runner.os, 'Linux')
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    - name: Upgrade pip, install poetry
+      run: |
+        python -m pip install --upgrade pip poetry
+
+    - name: Run initial poetry install
+      run: |
+        poetry install
+
+    - name: Run PyMedPhys GUI
+      run: |
+        poetry run pymedphys gui &
+
+    - name: Cypress run
+      uses: cypress-io/github-action@v1
+      with:
+        record: true
+      env:
+        # pass the Dashboard record key as an environment variable
+        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   WithUpdates:
     strategy:
