add cypress record key, attempt to run from github actions
Former-commit-id: b9cbd2b3346a580394ef382ba2885e542580b497 [formerly 6bda4cc60a6f390110b02f72635f8596f38c5788]
Former-commit-id: b28c70193c2c39ae259e9107891f7583a640686d

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,10 +191,13 @@ jobs:
       uses: cypress-io/github-action@v1
       with:
         record: true
+        start: cd tests/e2e && yarn start
       env:
         # pass the Dashboard record key as an environment variable
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        host: localhost
+        port: 8501
 
   WithUpdates:
     strategy:
