fix working directory in cypress install
Former-commit-id: dd8797c99176d6830e59ec487d5aba86316a4b74

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -164,6 +164,7 @@ jobs:
       uses: cypress-io/github-action@v1
       with:
         runTests: false
+        working-directory: tests/e2e
 
     - uses: actions/cache@v1
       with:
