actually set up python
Former-commit-id: 439e998826a1ca4b23e9eb024e41abe9804e5141 [formerly d3ef9d4fb3656d285a59b907816473b51646ac64]
Former-commit-id: f36704806a2497326050fed87743b6f168cd2555

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,6 +166,16 @@ jobs:
         runTests: false
         working-directory: tests/e2e
 
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+
+    - name: Show python information
+      run: |
+        python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
+        python -c "import platform; print(platform.machine()); print(platform.release())"
+
     - uses: actions/cache@v1
       with:
         path: ~/.pymedphys
