add hashing to pymedphys data
Former-commit-id: 133026b9c15c0f755e904c4faf59c498ff848134 [formerly f95db28814b73cf778fff91ebd6a06c52a2815f0]
Former-commit-id: cb33446b6f1b0ef622137447e0121348bce36463

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,7 @@ jobs:
     - uses: actions/cache@v1
       with:
         path: ~/.pymedphys
-        key: pymedphys-data
+        key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
 
     - uses: actions/cache@v1
       if: startsWith(runner.os, 'Linux')
@@ -187,7 +187,7 @@ jobs:
     - uses: actions/cache@v1
       with:
         path: ~/.pymedphys
-        key: pymedphys-data
+        key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
 
     - uses: actions/cache@v1
       with:
@@ -263,7 +263,7 @@ jobs:
     - uses: actions/cache@v1
       with:
         path: ~/.pymedphys
-        key: pymedphys-data
+        key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
 
     - uses: actions/cache@v1
       if: startsWith(runner.os, 'Linux')
